# gggg

./: .gitignore  Cargo.toml
crates/gggg_asset/: Cargo.toml
crates/gggg_asset/src/: loader.rs
crates/gggg_macros/: Cargo.toml
crates/gggg_macros/src/: lib.rs
crates/gggg_ui/: Cargo.toml  README.md
crates/gggg_ui/examples/: container.rs
crates/gggg_ui/src/: context.rs  lib.rs  shape.rs
crates/gggg_ui/src/fonts/: texture_atlas.rs
crates/gggg_ui/src/styles/: mod.rs  text_style.rs
crates/gggg_ui/src/widgets/: container.rs  flex.rs  mod.rs  text.rs  widget.rs
examples/draw-2d/: Cargo.toml
examples/draw-2d/src/: main.rs
examples/falling-sand/: Cargo.toml
examples/falling-sand/src/: main.rs
examples/hello-world/: Cargo.toml  biplane_painted.glb  jet.glb  plane.glb
examples/hello-world/src/: main.rs  shader.wgsl
src/: atlas.rs  bind.rs  camera.rs  geometry.rs  gltf.rs  input.rs  instance.rs  lib.rs  material.rs  pipeline.rs  plain.rs  render.rs  render_object.rs  shapes.rs  texture.rs  transform.rs  window.rs
src/shaders/: shapes_shader.wgsl  text.wgsl
src/text/: font_bitmap_manager.rs  mod.rs  pipeline.rs  text_builder.rs
