[package]
name = "gggg"
version = "0.1.0"
edition = "2021"

[[example]]
name = "draw-2d"
# crate-type = ["staticlib"]
path = "examples/draw-2d/src/main.rs"


[workspace]
members = [
    "examples/*",
    "crates/gggg_macros",
    "crates/gggg_ui",
    "crates/gggg_asset",
]

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.3", features = ["rwh_05"] }
anyhow = "1.0.71"
easy-gltf = "1.0.0"
env_logger = "0.10.0"
fontdue = "0.7.3"
generational-arena = "0.2.9"
image = "0.24.6"
itertools = "0.11.0"
log = "0.4.19"
nalgebra = "0.32.2"
pollster = "0.3.0"
rand = "0.8.5"
sdf_glyph_renderer = "1.0.0"
wgpu = "0.18.0"
msdf = { path = "../msdf" }
raw-window-handle = "0.6.0"
